[DevTools] Live update SW cache entries

Bug: 669719
Change-Id: Ibe99c22fb6748250dbfa6c7135d0b8588df4168f
Reviewed-on: https://chromium-review.googlesource.com/627716
Commit-Queue: Eugene Ostroukhov <eostroukhov@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Andrey Kosyakov <caseq@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#497901}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: 7b37507e478439d6aa77930966357b7071081b8a