third_party/WebKit/LayoutTests/http/tests/inspector/cache-storage/cache-storage-test.js
@@ -8,12 +8,18 @@ InspectorTest.preloadPanel("resources");
 InspectorTest.dumpCacheTree = async function()
 {
     UI.panels.resources._sidebar.cacheStorageListTreeElement.expand();
-    InspectorTest.addResult("Dumping CacheStorage tree:");
     var cachesTreeElement = UI.panels.resources._sidebar.cacheStorageListTreeElement;
     var promise = InspectorTest.addSnifferPromise(SDK.ServiceWorkerCacheModel.prototype, "_updateCacheNames");
     UI.panels.resources._sidebar.cacheStorageListTreeElement._refreshCaches();
-
     await promise;
+    await InspectorTest.dumpCacheTreeNoRefresh();
+}
+
+InspectorTest.dumpCacheTreeNoRefresh = async function()
+{
+    UI.panels.resources._sidebar.cacheStorageListTreeElement.expand();
+    InspectorTest.addResult("Dumping CacheStorage tree:");
+    var cachesTreeElement = UI.panels.resources._sidebar.cacheStorageListTreeElement;
 
     if (!cachesTreeElement.childCount()) {
         InspectorTest.addResult("    (empty)");
